force-app/main/default/objects/HI_State__c/fields/Kafka_Upserted_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Kafka_Upserted_DateTime__c</fullName>
    <description>This field will get the timestamp from the time this message was timestamped in Kafka</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Kafka Upserted DateTime</label>
    <type>DateTime</type>
</CustomField>